# stdash

./: Dockerfile  pyproject.toml  requirements.txt
src/stdash/: app.py  data.py
src/stdash/pages/: step2.py  step3.py
